--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "taskName": "build",
             "type": "shell",
-            "command": "make",
+            "command": "make -j4",
             "problemMatcher": [
                 "$gcc"
             ]
