--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "encoder.h": "c",
         "xutility": "c",
         "odrive_commands.h": "c",
-        "odrive_sensorless.h": "c"
+        "odrive_sensorless.h": "c",
+        "usbd_cdc_if.h": "c"
     }
 }
