Fix auto formatter settings to modified "Google"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "sensorless.h": "c",
         "usbd_cdc_if.h": "c",
         "drv8301.h": "c"
+    },
+        "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4 }"
     }
-}
