--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,12 @@
             "taskName": "flash",
             "type": "shell",
             "command": "make flash"
+        },
+        {
+            "taskName": "openocd",
+            "type": "shell",
+            "command": "openocd -f \"interface/stlink-v2.cfg\" -f \"target/stm32f4x_stlink.cfg\" -c \"gdb_port pipe; log_output openocd.log\"",
+            "problemMatcher": []
         }
     ]
 }
