--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,18 @@
         "gpio.h": "c",
         "type_traits": "cpp",
         "utility": "c",
-        "low_level.h": "c",
+        "low_level.h": "cpp",
         "motor.h": "c",
         "math.h": "c",
         "encoder.h": "c",
         "xutility": "c",
-        "commands.h": "c",
-        "sensorless.h": "c",
+        "commands.h": "cpp",
+        "sensorless.h": "cpp",
         "usbd_cdc_if.h": "c",
         "drv8301.h": "c",
         "adc.h": "c",
-        "configuration.h": "c"
+        "configuration.h": "cpp",
+        "utils.h": "cpp"
     },
         "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0 }"
     }
