move USB command handling to separate files, preliminary r, w and j commands

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,9 @@
                 "kind": "build",
                 "isDefault": true
             },
+            "presentation": {
+                "panel": "new"
+            },
             "problemMatcher": [
                 "$gcc"
             ]
