--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "taskName": "build",
             "type": "shell",
-            "command": "make -j4",
+            "command": "(cd Firmware && make -j4)",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -21,7 +21,7 @@
         {
             "taskName": "flash",
             "type": "shell",
-            "command": "make flash",
+            "command": "(cd Firmware && make flash)",
             "problemMatcher": []
         },
         {
