--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0 }",
+    "files.exclude": {
+        "Firmware/build": true
+    },
     "files.associations": {
         "memory": "cpp",
         "utility": "cpp",
