Add persistent storage of certain motor parameters.
The persistent storage can be controlled through the "save_config" and "reset" RPC functions. If a valid configuration is present, it's automatically loaded on startup. For now only a few parameters are saved (see config.cpp).

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -85,6 +85,7 @@ C_SOURCES = \
   MotorControl/low_level.c
 CPP_SOURCES = \
   MotorControl/axis.cpp \
+  MotorControl/config.cpp \
   MotorControl/commands.cpp \
   MotorControl/protocol.cpp
 ASM_SOURCES = \
