Remove W32 Browse Path, don't use Tag Parser

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.exclude": {
         "build": true
     },
+    "C_Cpp.intelliSenseEngineFallback": "Disabled",
     "files.associations": {
         "memory": "cpp",
         "utility": "cpp",
