I lied, let's only use the tag parser

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -3,7 +3,8 @@
     "files.exclude": {
         "build": true
     },
-    "C_Cpp.intelliSenseEngineFallback": "Disabled",
+    "C_Cpp.intelliSenseEngineFallback": "Enabled",
+    "C_Cpp.intelliSenseEngine": "Tag Parser",
     "files.associations": {
         "memory": "cpp",
         "utility": "cpp",
