make tup build quieter and work on windows

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -6,7 +6,7 @@ BUILD_DIR = build
 FIRMWARE = $(BUILD_DIR)/ODriveFirmware.elf
 
 all:
-	tup
+	@tup --quiet
 
 flash: all
 	openocd -f interface/stlink-v2.cfg -f target/stm32f4x.cfg -c init -c reset\ halt -c flash\ write_image\ erase\ $(FIRMWARE) -c reset\ run -c exit
