--- a/Firmware/.vscode/tasks.json
+++ b/Firmware/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "taskName": "build",
             "type": "shell",
-            "command": "make -j8",
+            "command": "make",
             "group": {
                 "kind": "build",
                 "isDefault": true
