--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -4,6 +4,7 @@
 
 BUILD_DIR = build
 FIRMWARE = $(BUILD_DIR)/ODriveFirmware.elf
+FIRMWARE_HEX = $(BUILD_DIR)/ODriveFirmware.hex
 
 all:
 	@tup --quiet
@@ -15,7 +16,7 @@ gdb: all
 	arm-none-eabi-gdb $(FIRMWARE) -x openocd.gdbinit
 
 dfu: all
-	../tools/dfu.py $(if $(value SERIAL_NUMBER),--serial-number $(SERIAL_NUMBER),) $(BUILD_DIR)/$(TARGET).hex
+	../tools/dfu.py $(if $(value SERIAL_NUMBER),--serial-number $(SERIAL_NUMBER),) $(FIRMWARE_HEX)
 
 bmp: all
 	arm-none-eabi-gdb --ex 'target extended-remote /dev/stlink' \
