--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,14 @@ install:
   - export GCC_URL=https://launchpad.net/gcc-arm-embedded/5.0/5-2015-q4-major/+download/gcc-arm-none-eabi-5_2-2015q4-20151219-linux.tar.bz2
   - if [ ! -e $GCC_DIR/bin/arm-none-eabi-gcc ]; then wget $GCC_URL -O $GCC_ARCHIVE; tar xfj $GCC_ARCHIVE -C $HOME/dl; fi
   - export PATH=$PATH:$GCC_DIR/bin
-  - export TUP_DIR=$HOME/dl/tup_0.7.2.12+ga582fee_amd64
-  - export TUP_ARCHIVE=$HOME/dl/tup_0.7.2.12+ga582fee_amd64.deb
-  - export TUP_URL=http://ppa.launchpad.net/anatol/tup/ubuntu/pool/main/t/tup/tup_0.7.2.12+ga582fee_amd64.deb
+  - export TUP_DIR=$HOME/dl/tup_0.7.5-0~16.04.york0_amd64
+  - export TUP_ARCHIVE=$HOME/dl/tup_0.7.5-0~16.04.york0_amd64.deb
+  - export TUP_URL=http://ppa.launchpad.net/jonathonf/tup/ubuntu/pool/main/t/tup/tup_0.7.5-0~16.04.york0_amd64.deb
   - if [ ! -e $TUP_DIR/bin/tup ]; then wget $TUP_URL -O $TUP_ARCHIVE; dpkg-deb -R $TUP_ARCHIVE $TUP_DIR; fi
   - export PATH=$PATH:$TUP_DIR/usr/bin
 
 script:
-  - cd Firmware
-  - mkdir -p build
-  - echo "CONFIG_BOARD_VERSION=v3.4-24V" > ../tup.config # TODO: build more configuration combinations
+  - mkdir -p Firmware/build
+  - echo "CONFIG_BOARD_VERSION=v3.4-24V" > tup.config # TODO: build more configuration combinations
   - tup generate ./build.sh
   - bash -xe ./build.sh
