--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ install:
   - export PATH=$PATH:$TUP_DIR/usr/bin
 
 script:
-  - mkdir -p Firmware/build
+  - cd Firmware
+  - mkdir -p build
   - echo "CONFIG_BOARD_VERSION=v3.4-24V" > tup.config # TODO: build more configuration combinations
   - tup generate ./build.sh
   - bash -xe ./build.sh
