--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -7,7 +7,7 @@ FIRMWARE = $(BUILD_DIR)/ODriveFirmware.elf
 FIRMWARE_HEX = $(BUILD_DIR)/ODriveFirmware.hex
 
 all:
-	@tup --quiet
+	@tup --quiet --no-environ-check
 
 flash: all
 	openocd -f interface/stlink-v2.cfg -f target/stm32f4x.cfg -c init -c reset\ halt -c flash\ write_image\ erase\ $(FIRMWARE) -c reset\ run -c exit
