--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,12 @@ env:
 
 script:
   - ./tools/build.sh
+
+deploy:
+  provider: releases
+  api_key: "GITHUB OAUTH TOKEN"
+  file: Firmware/deploy/*
+  skip_cleanup: true
+  on:
+    branch: master
+    tags: true
