--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -28,7 +28,8 @@ bmp: all
 erase_config:
 	openocd -f interface/stlink-v2.cfg -f target/stm32f4x.cfg -c init -c reset\ halt -c flash\ erase_address\ 0x80C0000\ 0x40000 -c reset\ run -c exit
 
-# OTP format:
+# The one-time programmable memory stores the board version
+# has the following format:
 #  - OTP format version (0xFE: version 1)
 #  - vendor ID (01: ODrive Robotics - do not use this on custom incompatible hardware!)
 #  - product ID (01: ODrive)
@@ -36,7 +37,8 @@ erase_config:
 #  - hardware minor version
 #  - hardware variant (00: 24V, 01: 48V)
 # Bits in the OTP can only ever be set to 0 but never back to 1.
-# Therefore do not try to run this on the same board twice with different data.
+# Therefore do not try to run this command on the same board
+# twice with different data.
 #
 # This OpenOCD command is intended for a STM32F405 and does the following:
 #  FLASH_KEYR = 0x45670123; // unlock FLASH_CR
@@ -65,7 +67,8 @@ else
 	@echo "The one-time programmable memory can only be"
 	@echo "written ONCE on every board (what a surprise)."
 	@echo "If you're on an ODrive v3.5 or later we already did this for you."
-	@echo "Otherwise, if you're mentally ready for this, do the following steps:"
+	@echo "Otherwise, if you're mentally ready for this irreversible action,"
+	@echo "take the following steps:"
 	@echo " 1. open the Makefile and look at the write_otp target"
 	@echo " 2. understand the structure of the OTP"
 	@echo " 3. edit the bytes that are written to match your board version"
