--- a/tools/test-rig.yaml
+++ b/tools/test-rig.yaml
@@ -1,25 +1,56 @@
 
 # ODrives
 odrives:
-  - board-version: v3.4-24V
+  - name: top-odrive
+    board-version: v3.4-24V
     serial-number: "385F324D3037"
     brake-resistance: 0.47
-    uart: /dev/serial/by-id/...
+    uart: /dev/serial/by-id/[not-yet-used]
     usb: auto
-    programmer: /dev...
+    programmer: '533f7506493f49514454193f'
+    vbus-voltage: 12 # [V]
+    max-brake-power: 150 # [W]
     axes:
-      - motor-phase-resistance: 0.033
-        motor-phase-inductance: 1.6e-05
+      - motor-phase-resistance: 0.0245
+        motor-phase-inductance: 2.03e-05
         motor-pole-pairs: 7
-        motor-direction: 1
+        motor-direction: -1
+        motor-kv: 190
+        motor-max-current: 50
         encoder-cpr: 8192
       - motor-phase-resistance: 0.028
         motor-phase-inductance: 1.6e-05
         motor-pole-pairs: 7
         motor-direction: -1
+        motor-kv: 270
+        motor-max-current: 50
+        encoder-cpr: 8192
+  - name: bottom-odrive
+    board-version: v3.4-48V
+    serial-number: "306A396A3235"
+    brake-resistance: 0.47
+    uart: /dev/serial/by-id/[not-yet-used]
+    usb: auto
+    programmer: '493f6f06493f56540929113f'
+    vbus-voltage: 12 # [V]
+    max-brake-power: 150 # [W]
+    axes:
+      - motor-phase-resistance: 0.0253
+        motor-phase-inductance: 1.6e-05
+        motor-pole-pairs: 7
+        motor-direction: 1
+        motor-kv: 270
+        motor-max-current: 50
+        encoder-cpr: 8192
+      - motor-phase-resistance: 0.0245
+        motor-phase-inductance: 2.03e-05
+        motor-pole-pairs: 7
+        motor-direction: -1
+        motor-kv: 190
+        motor-max-current: 50
         encoder-cpr: 8192
 
 # Mechanical couplings
 couplings:
-  #- [ odrive0.axis0, odrive1.axis0 ]
-  #- [ odrive0.axis1, odrive1.axis1 ]
+  - [ top-odrive.axis0, bottom-odrive.axis1 ]
+  - [ top-odrive.axis1, bottom-odrive.axis0 ]
