make two separate debug configurations

--- a/Firmware/.vscode/launch.json
+++ b/Firmware/.vscode/launch.json
@@ -11,6 +11,19 @@
             "request": "launch",
             "name": "Debug ODrive",
             "executable": "${workspaceRoot}/build/ODriveFirmware.elf",
+            "configFiles": [
+                "interface/stlink-v2.cfg",
+                "target/stm32f4x_stlink.cfg",
+            ],
+            "cwd": "${workspaceRoot}"
+        },
+        {
+            // For the Cortex-Debug extension
+            "type": "cortex-debug",
+            "servertype": "openocd",
+            "request": "launch",
+            "name": "Debug ODrive - FreeRTOS",
+            "executable": "${workspaceRoot}/build/ODriveFirmware.elf",
             "rtos": "FreeRTOS",
             "configFiles": [
                 "interface/stlink-v2.cfg",
