--- a/Firmware/Board/v3/Makefile
+++ b/Firmware/Board/v3/Makefile
@@ -58,7 +58,10 @@ Middlewares/Third_Party/FreeRTOS/Source/timers.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c \
-Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
+Middlewares/Third_Party/FreeRTOS/Source/event_groups.c \
+Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c \
+Src/i2c.c \
+Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
 
 ASM_SOURCES = \
   startup_stm32f405xx.s
