--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -5,9 +5,8 @@
 BUILD_DIR = build
 FIRMWARE = $(BUILD_DIR)/ODriveFirmware.elf
 FIRMWARE_HEX = $(BUILD_DIR)/ODriveFirmware.hex
-PROGRAMMER_HEX := $(shell echo $(PROGRAMMER) | sed -e 's/.\\{2\\}/\\\\x&/g')
 OPENOCD := openocd -f interface/stlink-v2.cfg \
-		$(if $(value PROGRAMMER),-c 'hla_serial $(PROGRAMMER_HEX)',) \
+		$(if $(value PROGRAMMER),-c 'hla_serial $(PROGRAMMER)',) \
 		-f target/stm32f4x.cfg
 
 
