--- a/tools/odrive_header_template.h.in
+++ b/tools/odrive_header_template.h.in
@@ -14,8 +14,15 @@ namespace odrive {
     
 static constexpr const uint16_t json_crc = 0x{{ "%0x" | format(json_crc) }};
 
+static constexpr const uint16_t per_axis_offset = {{ per_axis_offset }};
+
 enum { {% for endpoint in endpoints %}
-  {{enum_name(endpoint)}} = {{endpoint.id}},
+    {{enum_name(endpoint)}} = {{endpoint.id}},
+{%- endfor %}
+
+    // Per-Axis endpoints (to be used with read_axis_property and write_axis_property)
+{%- for endpoint in axis_endpoints %}
+    {{enum_name(endpoint)}} = {{endpoint.id}},
 {%- endfor %}
 };
 
@@ -23,6 +30,11 @@ template<int I>
 struct endpoint_type;
 
 {% for endpoint in endpoints -%}
+template<> struct endpoint_type<{{enum_name(endpoint)}}> { typedef {{endpoint.type}} type; };
+{% endfor %}
+
+// Per-axis endpoints
+{% for endpoint in axis_endpoints -%}
 template<> struct endpoint_type<{{enum_name(endpoint)}}> { typedef {{endpoint.type}} type; };
 {% endfor %}
 
