--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,8 @@ env:
   - CONFIG_BOARD_VERSION=v3.3 DEPLOY=v3.3
   - CONFIG_BOARD_VERSION=v3.4-24V DEPLOY=v3.4-24V
   - CONFIG_BOARD_VERSION=v3.4-48V DEPLOY=v3.4-48V
+  - CONFIG_BOARD_VERSION=v3.5-24V DEPLOY=v3.5-24V
+  - CONFIG_BOARD_VERSION=v3.5-48V DEPLOY=v3.5-48V
 
   # Various protocol combinations
   - CONFIG_BOARD_VERSION=v3.4-24V CONFIG_USB_PROTOCOL=native-stream CONFIG_UART_PROTOCOL=native
