--- a/Firmware/.vscode/tasks.json
+++ b/Firmware/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "taskName": "build",
+            "label": "build",
             "type": "shell",
             "command": "make",
             "group": {
@@ -19,13 +19,13 @@
             ]
         },
         {
-            "taskName": "flash",
+            "label": "flash",
             "type": "shell",
             "command": "make flash",
             "problemMatcher": []
         },
         {
-            "taskName": "openocd",
+            "label": "openocd",
             "type": "shell",
             "command": "openocd -f \"interface/stlink-v2.cfg\" -f \"target/stm32f4x_stlink.cfg\" -c \"gdb_port 3333; log_output openocd.log\"",
             "problemMatcher": []
