--- a/docs/_data/index.yaml
+++ b/docs/_data/index.yaml
@@ -15,6 +15,8 @@ sections:
         url: interfaces
       - title: Encoders
         url: encoders
+      - title: Control
+        url: control
       - title: Troubleshooting
         url: troubleshooting
   - title: For ODrive Developers
