--- a/Firmware/Board/v3/Makefile
+++ b/Firmware/Board/v3/Makefile
@@ -61,7 +61,9 @@ Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c \
 Middlewares/Third_Party/FreeRTOS/Source/event_groups.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c \
 Src/i2c.c \
-Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
+Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c \
+Src/iwdg.c \
+Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_iwdg.c
 
 ASM_SOURCES = \
   startup_stm32f405xx.s
@@ -82,6 +84,9 @@ C_INCLUDES = \
 -IDrivers/CMSIS/Device/ST/STM32F4xx/Include \
 -IDrivers/CMSIS/Include \
 -IInc
+
+include ../../Tasks/ThreadUtilities/ThreadTemplate.mk
+include ../../Tasks/Utilities/Utilities.mk
 
 # CubeMX insists on this line
   Inc
