--- a/tools/test-rig-rpi.yaml
+++ b/tools/test-rig-rpi.yaml
@@ -65,18 +65,18 @@ components:
 connections:
   - ['odrive.can', 'rpi.can0']
   - ['teensy.program', 'rpi.gpio26']
-  - ['teensy.gpio11', 'rpi.uart0.tx']
-  - ['teensy.gpio12', 'rpi.uart0.rx']
-  - ['teensy.gpio10', 'odrive.gpio1']
-  - ['teensy.gpio9', 'odrive.gpio2']
-  - ['teensy.gpio8', 'odrive.gpio3']
-  - ['teensy.gpio7', 'odrive.gpio4']
+  - ['teensy.gpio12', 'rpi.uart0.tx']
+  - ['teensy.gpio13', 'rpi.uart0.rx']
+  - ['teensy.gpio11', 'odrive.gpio1']
+  - ['teensy.gpio10', 'odrive.gpio2']
+  - ['teensy.gpio9', 'odrive.gpio3']
+  - ['teensy.gpio8', 'odrive.gpio4']
   - ['teensy.gpio14', 'odrive.gpio5']
   - ['teensy.gpio15', 'odrive.gpio6']
   - ['teensy.gpio16', 'odrive.gpio7']
   - ['teensy.gpio17', 'odrive.gpio8']
-  - ['teensy.gpio4', 'rpi.gpio20']
-  - ['teensy.gpio5', 'rpi.gpio19']
+  - ['teensy.gpio6', 'rpi.gpio20']
+  - ['teensy.gpio7', 'rpi.gpio19']
   - ['teensy.gpio23', 'odrive.encoder0.z']
   - ['teensy.gpio22', 'odrive.encoder0.a']
   - ['teensy.gpio21', 'odrive.encoder0.b']
@@ -86,6 +86,9 @@ connections:
   - ['teensy.gpio0', 'real_encoder.z']
   - ['teensy.gpio1', 'real_encoder.a']
   - ['teensy.gpio2', 'real_encoder.b']
+  - ['teensy.gpio3', 'odrive.spi.mosi']
+  - ['teensy.gpio4', 'odrive.spi.miso']
+  - ['teensy.gpio5', 'odrive.spi.sck']
   - ['odrive.axis0', 'D5065-270KV_0']
   - ['D5065-270KV_0', 'real_encoder']
   - ['odrive.gpio3', 'lpf0']
